# phynjo

./: .gitignore  LICENSE  README.md  output.csv  physics-edsl.cabal  traj.csv  x.csv
app/: Main.hs
app/examples/: double_pendulum_symb.hs  example00.hs  example01.hs  example02.hs  example03.hs  example04.hs  example05.hs  example06.hs  example07.hs  example08.hs  example09.hs  example10.hs  example11.hs  example12.hs  example13.hs  hookes.hs  planetrevolution.hs  projectile.hs  rotatingcube.hs  single_pendulum_lagrangian.hs  sphereonspherecol.hs  tennisball.hs  threebodyproblem.hs
renderers/: hookes.py  ttball.py
renderers/data/: 2bodyhookes.csv  collidingspheres.csv  doublePendulum.csv  ttball.csv
results/data/: orbitaldata.csv
results/plot_helpers/: 3Body.py  3BodyFigure8.py  doublependulum.py  hookes.py  ttball.py
results/plot_helpers/hookes/: plot_displacement.py  plot_energy.py
results/plot_helpers/ttball/: plot_momentum.py  plot_trajectory.py  rotational.py  rotational_angular_momentum.py
results/renderers/: 3body.py  cube.py  doublependulum.py  hookes.py  requirements.txt  ttball.py
simulations/: cube.py  doublependulum.py
simulations/data/: projectilemotion.csv  rotatingbody.csv
src/: Action.hs  Body.hs  Components.hs  Constraint.hs  EventRule.hs  EventWorkflow.hs  Literal.hs  NRune.hs  NSpell.hs  NState.hs  NumericRule.hs  NumericWorkflow.hs  Process.hs  Rune.hs  ScalarLiteral.hs  Spell.hs  System.hs  Transition.hs  UnitLiteral.hs
src/BooleanUtils/: EventRule.hs  EventWorkflow.hs  Literal.hs  Process.hs  Transition.hs
src/CAS/: AST.hs  Differentiate.hs  Parser.hs  PrettyPrinter.hs  Simplify.hs  SolveSystem.hs
src/CAS/Integrate/: Exponential.hs  Integrate.hs  Logarithmic.hs  Polynomial.hs  Rational.hs  Trigonometric.hs
src/Phynjo/: Collisions.hs  Core.hs  Forces.hs  Integrators.hs  RB.hs  SymbolicPhysics.hs
src/Physics/: Contact.hs  Drift.hs  DriftNR.hs  EulerNR.hs  Extra.hs  Force.hs  Force3D.hs  ForceDSL.hs  ForceNR.hs  GravNR.hs  Lagrangian.hs  Leapfrog1D.hs  LeapfrogNR.hs  RK4Integrator.hs  Rigid3DNR.hs  RigidBody.hs  RigidState.hs  Symbolic.hs  Symplectic4.hs
src/Physics/Collision/: BoundingVolume.hs  Manager.hs  NarrowPhase.hs  Types.hs
src/Physics/Collision/BroadPhase/: SweepAndPrune.hs  UniformGrid.hs
src/Physics/Contact/: Flexible.hs
src/Physics/Force3D/: Extra.hs
src/Physics/Forces/: Extra.hs  Force.hs  Force3D.hs  ForceDSL.hs  ForceNR.hs  GravNR.hs
src/Physics/Integrators/: EulerNR.hs  Leapfrog1D.hs  LeapfrogNR.hs  RK4Integrator.hs  Symplectic4.hs
src/Physics/Math/: LinearAlgebra.hs  Vec3Util.hs
src/Physics/RigidBodyUtilities/: Rigid3DNR.hs  RigidBody.hs  RigidState.hs
src/Physics/Sim/: Compose.hs
src/SymbolicPhysics/: PrettyEL.hs  SRune.hs  SSpell.hs  SState.hs  SymbolicD.hs
src/System/: SystemForces.hs
test/: ActionSpec.hs  BodySpec.hs  ComponentsSpec.hs  ConstraintSpec.hs  DriftNRSpec.hs  EulerNRSpec.hs  EventRuleSpec.hs  EventWorkflowSpec.hs  LiteralSpec.hs  ProcessSpec.hs  RuneSpec.hs  ScalarLitSpec.hs  Spec.hs  SpellSpec.hs  SystemSpec.hs  TransitionSpec.hs  UnitLiteralSpec.hs
test/Physics/: ContactSpec.hs  ExtraSpec.hs  ForceDSLSpec.hs  ForceNRSpec.hs  ForceSpec.hs  RK4IntegratorSpec.hs  RigidBodySpec.hs  RigidStateSpec.hs  SymbolicSpec.hs  Symplectic4Spec.hs
test/Physics/Collision/: BoundingVolumeSpec.hs  ManagerSpec.hs  NarrowPhaseSpec.hs  TypesSpec.hs
test/Physics/Collision/BroadPhase/: SAPSpec.hs  UniformGridSpec.hs
test/Physics/Contact/: FlexibleSpec.hs
test/Physics/Force3D/: ExtraSpec.hs
test/Physics/Math/: Vec3UtilSpec.hs
test/Physics/Sim/: ComposeSpec.hs
test/SymbolicPhysics/: SRuneSpec.hs  SSpellSpec.hs  SStateSpec.hs
test/System/: SystemForcesSpec.hs
