cabal-version:       2.2
name:                physics-edsl
version:             0.1.0.0
synopsis:            A Haskell EDSL for physics abstractions
description:         |
  physics-edsl is an embedded domain-specific language (EDSL) in Haskell
  for modeling and simulating physical systems. It builds on a formal
  component–phenomenon abstraction, providing compositional “runes” (atomic
  laws) and “spells” (composed behaviors) with first-class support for
  conservation laws and constraints.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Anubhav Lamsal
maintainer:          333anubhav@gmail.com
copyright:           2025 Anubhav Lamsal
category:            Simulation
build-type:          Simple

library
  hs-source-dirs:
    src
  exposed-modules:
      Components
    , Literal
    , Transition
    , Action
    , Process
    , Rune
    , Spell
    , Constraint
    , UnitLiteral
    , Body
    , System
    , ScalarLiteral
    , NRune
    , NState
    , NSpell
    , Physics.DriftNR
    , Physics.GravNR
    , Physics.EulerNR
    , Physics.LeapfrogNR
    , Physics.Force
    , Physics.ForceNR
    , Physics.ForceDSL
    , System.SystemForces
    , Physics.Leapfrog1D
    , Physics.Symplectic4
    , Physics.RK4Integrator
    , Physics.RigidBody
    , Physics.RigidState
    , Physics.Rigid3DNR
    , Physics.Force3D
    , Physics.Contact
    , SymbolicPhysics.SymbolicD
    , Physics.Lagrangian
    , SymbolicPhysics.SState
    , SymbolicPhysics.SRune
    , SymbolicPhysics.SSpell
  build-depends:
      base       >= 4.7 && < 5
    , containers >= 0.6 && < 1
    , linear       >= 1.22  && < 1.24
    , dimensional  >= 1.6   && < 1.7
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

executable physics-edsl
  hs-source-dirs:
    app
  main-is:
    examples/example07.hs
  build-depends:
      base       >= 4.7 && < 5
    , containers >= 0.6 && < 1
    , physics-edsl
    , linear       >= 1.22  && < 1.24
    , dimensional  >= 1.6   && < 1.7

  default-language:
    Haskell2010
  ghc-options:
    -Wall

test-suite physics-edsl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base       >= 4.7 && < 5
    , containers >= 0.6 && < 1
    , hspec      >= 2.7
    , physics-edsl
    , linear       >= 1.22  && < 1.24
    , dimensional  >= 1.6   && < 1.7
  default-language:
    Haskell2010
  ghc-options:
    -Wall
